# Velocirate

./: .gitignore  CMakeLists.txt  README.md  Readme.md  bak_makefile_mayuse-cmake  build_cmake.sh  clean_cmake.sh  deps  test.sh
input/: company_tickers_exchange.json
src/: config.h  database.cpp  database.h  database_manager.cpp  database_manager.h  database_read.cpp  database_read.h  database_utility_handling.cpp  database_utility_handling.h  database_write.cpp  database_write.h  decompress.cpp  decompress.h  file_ops.cpp  file_ops.h  http.cpp  http.h  http_read.cpp  http_read.h  http_write.cpp  http_write.h  main.cpp  usafuncs.cpp  usafuncs.h  utils.cpp  utils.h
src/shared/: argument_parser.h  config.h  database_manager.h  database_read.h  database_write.h  decompress.h  file_ops.h  http_read.h  http_write.h  init_sqlite_cik.h  trimws.h
src/velocirate/: Readme.md  main.cpp
